--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/jpg" href="images/CoE.jpg">
+  <link rel="icon" type="image/jpg" href="images/profpic.jpg">
 </head>
 
 <body>
@@ -20,28 +20,30 @@
               <p style="text-align:center">
                 <name>Edith LLontop</name>
               </p>
-              <p>I am a student at UC Berkeley majoring in Electrical Engineering and Computer Science where I am an undergraduate researcher at 
-              <a href="http://rail.eecs.berkeley.edu/">Berkeley Artificial Intelligence Research</a> under <a href="http://people.eecs.berkeley.edu/~svlevine/">Prof. Sergey Levine</a>. I am also conducting research under 
-              <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/baolshausen.html">Prof. Bruno Olshausen</a> from the <a href="https://redwood.berkeley.edu/">Redwood Center for Theoretical Neuroscience</a>. I am also a member of  
-              <a href="https://ml.berkeley.edu/">Machine Learning at Berkeley</a> where I lead research projects, course offerings, and mentor incoming students.
-              </p>
-              <p>
-           <b>Summer 2022:</b> I was a software development engineer intern at Amazon working with Amazon Web Services to create optimized Spark/Hadoop algorithms that use multiple clusters from load balancing across sharded data. <br>
-               <b>Summer 2021:</b> I was a research fellow at NASA JPL where I worked with team <a href="https://costar.jpl.nasa.gov/">CoStar</a>, a joint MIT-Caltech-NASA organization for robotics research.
-              I specifically worked with skill development for robotic planning through deep learning techniques. <br>
-           <b>Fall 2021:</b> I was a <a href="https://www.epicberkeley.com/fellowship">Schmidt Futures AI Fellow</a> for Educational AI Technology
-               and entrepreneurship. <br>
-              </p>
-              <p style="text-align:center">
-                <a href="mailto:nrdashora@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/NitishDashora-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/NitishDashora-bio.txt">Bio</a> &nbsp/&nbsp
-                <a href="https://twitter.com/DashoraNitish">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/Dashora7">Github</a>
-              </p>
+            <p>Hello! I am a senior at UC Berkeley majoring in Electrical Engineering and Computer Science. I am passionate about robotics and I currently do research in <a href="https://autolab.berkeley.edu">Berkeley Artificial Intelligence Research</a> under <a href="https://goldberg.berkeley.edu">Prof. Ken Goldberg</a>.
+                Learn more about me and the work I am doing below!
+            </p>
+            <p style="text-align:center">
+               <a href="mailto:edithllontop@berkeley.edu">Email</a> &nbsp/&nbsp
+               <a href="data/NitishDashora-CV.pdf">CV</a> &nbsp/&nbsp
+               <a href="data/NitishDashora-bio.txt">Bio</a> &nbsp/&nbsp
+               <a href="https://twitter.com/DashoraNitish">Twitter</a> &nbsp/&nbsp
+               <a href="https://github.com/edithllontop1">Github</a>
+             </p>
+
+        <p>
+        <heading>Industry Experience</heading>
+           <b>Summer 2022 Software Engineering Intern @ Nextdoor:</b>
+                I was a software development engineer intern at Amazon working with Amazon Web Services to create optimized Spark/Hadoop algorithms that use multiple clusters from load balancing across sharded data. 
+            <br>
+            <b>Summer 2021 Software Engineering Intern @ BlackRock:</b> 
+                I was a research fellow at NASA JPL where I worked with team <a href="https://costar.jpl.nasa.gov/">CoStar</a>, a joint MIT-Caltech-NASA organization for robotics research.
+              I specifically worked with skill development for robotic planning through deep learning techniques. 
+            <br>
+                </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/IMG_0586_full.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_0586.png" class="hoverZoomLink"></a>
+              <a href="images/profpic.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profpic.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -50,6 +52,11 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
+        Most of my work so far has related to the Multi-Object Grasping and robotic cloud computing. However the most recent project I am working on is related to Full-Body Control on
+        a Quadruped.
+        I have also had prior industry experience and other project that have exposed more to 
+        to this field!
+
         I am most interested in the theory of intelligence and how to create general learning systems that encompass this definition. 
         The age-old question of AGI has so strongly captivated me that I am certain I would like to dedicate my life’s career to exploring it.       
         I think that physical embodiment will play a significant role in the creation of AGI, thus I find that robotics and robot learning is an excellent testbed for AI research.  
@@ -67,60 +74,70 @@
           
           
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr onmouseout="hip_stop()" onmouseover="hip_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/fig1.jpg' width="160" style="padding-top: 19px;">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>Push-MOG: Efficient Pushing to Consolidate Polygonal Objects for Multi-Object Grasping</papertitle>
+              <br>
+              Shrey Aeron, Edith Llontop, Aviv Adler, Wisdom C. Agboh, Mehmet Dogar, and Ken Goldberg
+              <br>
+              <em>Under review at CASE 2023</em>
+              <br>
+<!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
+              <a href="https://arxiv.org/abs/2111.10948">arXiv</a>
+              <p></p> -->
+              <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
+            </td>
+          </tr>
+
+        <tr onmouseout="hip_stop()" onmouseover="hip_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/scg_overview.png' width="160" style="padding-top: 19px;">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <papertitle>FogROS2-SGC: A ROS2 Cloud Robotics Platform for Secure Global Connectivity</papertitle>
+              <br>
+              Kaiyuan Chen, Ryan Hoque, Karthik Dharmarajan, Edith LLontop, Simeon Oluwafunmilore Adebola, Jeffrey Ichnowski, John Kubiatowicz, Ken Goldberg
+              <br>
+              <em>Under review at IROS 2023</em>
+              <br>
+<!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
+              <a href="https://arxiv.org/abs/2111.10948">arXiv</a> -->
+              <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
+            </td>
+          </tr>
 
           <tr onmouseout="dim_stop()" onmouseover="dim_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='dim_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/dim_vid.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/dim_ss.jpg' width="160", style="padding-top: 40px;">
+                <img src='images/updated-fig.jpg' width="160", style="padding-top: 40px;">
               </div>
-              <script type="text/javascript">
-                function dim_start() {
-                  document.getElementById('dim_image').style.opacity = "1";
-                }
-
-                function dim_stop() {
-                  document.getElementById('dim_image').style.opacity = "0";
-                }
-                hip_stop()
-              </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 
-                <papertitle>Imitative Models for Passenger-Scale Autonomous Off-Road Driving</papertitle>
-
+              <papertitle>The Teenager’s Problem: Efficient Garment Decluttering Using Heap Consolidation</papertitle>
               <br>
-              <strong>Nitish Dashora *</strong>,
-              Sunggoo Jung,
-          Valentin Ibars,
-              Osher Lerner,
-          Calvin Jung,
-              <a href="https://people.eecs.berkeley.edu/~shah/">Dhruv Shah</a>,
-          <a href="https://people.eecs.berkeley.edu/~nrhinehart/">Nicholas Rhinehart</a>,
-          <a href="http://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
-              <a href="https://aliagha.site/">Ali Agha-Mohammadi</a>,
-              
+              Wisdom C. Agboh, Edith LLontop, Ayah Ahmed, Mehmet Dogar, Ken Goldberg
               <br>
-                            <em>Under Review at ICRA 2023</em>
+              <em>Under Review at RSS 2023</em>
               <br>
               <p></p>
-              <p> DAgger-like imitative learning with model predictive path integral control works as an end-to-end navigation system.</p>
+              <p> Proposed analytical and learned policies to generate grasps for multiple garments using an overhead RGBD camera and policies for consolidating small heaps into larger ones.</p>
             </td>
           </tr> 
         
       <tr onmouseout="hip_stop()" onmouseover="hip_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='hip_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/hip_vid.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/hip_ss.jpg' width="160" style="padding-top: 19px;">
+                <img src='images/fogros2.png' width="160" style="padding-top: 19px;">
               </div>
-              <script type="text/javascript">
+<!--               <script type="text/javascript">
                 function hip_start() {
                   document.getElementById('hip_image').style.opacity = "1";
                 }
@@ -129,64 +146,80 @@
                   document.getElementById('hip_image').style.opacity = "0";
                 }
                 hip_stop()
-              </script>
+              </script> -->
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://sites.google.com/view/hybrid-imitative-planning/">
-                <papertitle>Hybrid Imitative Planning with Geometric and Predictive Costs in Off-road Environments</papertitle>
-              </a>
+
+                <papertitle>FogROS2: An Adaptive Platform for Cloud and Fog Robotics Using ROS 2</papertitle>
               <br>
-              <strong>Nitish Dashora</strong>,
-              Daniel Shin,
-              <a href="https://people.eecs.berkeley.edu/~shah/">Dhruv Shah</a>,
-              <a href="https://uwaterloo.ca/vision-image-processing-lab/people-profiles/henry-leopold">Henry Leopold</a>, <br>
-              <a href="https://daviddfan.com/">David Fan</a>,
-              <a href="https://aliagha.site/">Ali Agha-Mohammadi</a>,
-          <a href="https://people.eecs.berkeley.edu/~nrhinehart/">Nicholas Rhinehart</a>,
-              <a href="http://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+              Jeffrey Ichnowski*, Kaiyuan Chen*, Karthik Dharmarajan, Simeon Adebola, Michael Danielczuk, Victor Mayoral-Vilches,
+                Nikhil Jha, Hugo Zhan, Edith LLontop, Derek Xu, John Kubiatowicz, Ion Stoica, Joseph Gonzalez, and Ken Goldberg
               <br>
-                            <em>Accepted at ICRA 2022</em>
+              <em>Accepted at ICRA 2023</em>
               <br>
-              <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
+<!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a>
-              <p></p>
+              <p></p> -->
               <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
             </td>
           </tr>
     
     </tbody></table>
-        
-        
-        
+
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+              <tr>
+                <td>
+                  <heading>Teaching</heading>
+                </td>
+              </tr>
+            </tbody></table>
+        
+              
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/berkeleyEECS.png" alt="Berkeley EECS Logo" width="250" height="200">
+                </td>
+                <td width="75%" valign="center">
+                  <a href="https://inst.eecs.berkeley.edu/~ee16b/sp22/">Student Instructor, EECS 16B - Information Devices (Fall 2021)</a>
+                </td>
+              </tr>
+            </tbody></table>
+              
+            <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="images/berkeleyEECS.png" alt="Berkeley EECS Logo" width="250" height="200">
+                </td>
+                <td width="75%" valign="center">
+                  <a href="http://fa20.datastructur.es">Academic Intern, CS 61B - Data Structure and Algorithms (Spring 2021)</a>
+                </td>
+              </tr>
+            </tbody></table>
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+              <tr>
+                <td style="padding:0px">
+                  <br>
+                  <p style="text-align:right;font-size:small;">
+                    <a href="https://github.com/jonbarron/jonbarron_website">source</a>
+                    <br>
+                  </p>
+                </td>
+              </tr>
+            </tbody></table>
+          </td>
+        </tr>
+      </table>
         
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
-              <heading>Teaching</heading>
+              <heading>Extra Curriculars</heading>
             </td>
           </tr>
         </tbody></table>
     
-    <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-       <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cs188_bot.png" alt="CS 188 Logo" width="250" height="150">
-            </td>
-            <td width="75%" valign="center">
-              <a href="https://inst.eecs.berkeley.edu/~cs188/sp22/">Undergraduate Student Instructor (uGSI), CS188 - Intro to AI (Fall 2022)</a>
-            </td>
-          </tr>
-        
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cs188_bot.png" alt="CS 188 Logo" width="250" height="150">
-            </td>
-            <td width="75%" valign="center">
-              <a href="https://inst.eecs.berkeley.edu/~cs188/sp22/">Undergraduate Student Instructor (uGSI), CS188 - Intro to AI (Spring 2022)</a>
-            </td>
-          </tr>
-        </tbody></table>
           
     <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
@@ -194,7 +227,7 @@
               <img src="images/berkeleyEECS.png" alt="Berkeley EECS Logo" width="250" height="200">
             </td>
             <td width="75%" valign="center">
-              <a href="https://www.eecs16b.org/">Reader, EECS 16B - Information Devices (Fall 2021)</a>
+              <a href="https://inst.eecs.berkeley.edu/~ee16b/sp22/">Student Instructor, EECS 16B - Information Devices (Fall 2021)</a>
             </td>
           </tr>
         </tbody></table>
@@ -205,7 +238,7 @@
               <img src="images/berkeleyEECS.png" alt="Berkeley EECS Logo" width="250" height="200">
             </td>
             <td width="75%" valign="center">
-              <a href="https://www.eecs70.org/">Academic Intern, CS 70 - Discrete Math and Probability (Spring 2021)</a>
+              <a href="http://fa20.datastructur.es">Academic Intern, CS 61B - Data Structure and Algorithms (Spring 2021)</a>
             </td>
           </tr>
         </tbody></table>
