--- a/index.html
+++ b/index.html
@@ -30,46 +30,43 @@
                <a href="https://twitter.com/DashoraNitish">Twitter</a> &nbsp/&nbsp
                <a href="https://github.com/edithllontop1">Github</a>
              </p>
-
-        <p>
-        <heading>Industry Experience</heading>
-           <b>Summer 2022 Software Engineering Intern @ Nextdoor:</b>
-                I was a software development engineer intern at Amazon working with Amazon Web Services to create optimized Spark/Hadoop algorithms that use multiple clusters from load balancing across sharded data. 
-            <br>
-            <b>Summer 2021 Software Engineering Intern @ BlackRock:</b> 
-                I was a research fellow at NASA JPL where I worked with team <a href="https://costar.jpl.nasa.gov/">CoStar</a>, a joint MIT-Caltech-NASA organization for robotics research.
-              I specifically worked with skill development for robotic planning through deep learning techniques. 
-            <br>
-                </p>
-            </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/profpic.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profpic.png" class="hoverZoomLink"></a>
-            </td>
+           </td>
+           <td style="padding:2.5%;width:40%;max-width:40%">
+            <a href="images/profpic.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profpic.jpg" class="hoverZoomLink"></a>
+            </td>
           </tr>
         </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Industry Experience</heading>
+              <p>
+                <b>Summer 2022 Software Engineering Intern @ Nextdoor:</b>
+                I joined Nextdoor's Machine Learning team where I helped strengthen an Natual Language Processing model and helped build an API for feature retrieval.
+            <br>
+            <b>Summer 2021 Software Engineering Intern @ BlackRock:</b> 
+            I was a part of Blackgrock's Alladin Product group where I was put in the Tick Data Analytics team and I helped build a new infrastructure that would
+            allow employees to get fast and new information on Broker Axe data from the financial market
+            <br>
+              </p>
+            </td> 
+          </tr>
+        </tbody></table>
+          
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-        Most of my work so far has related to the Multi-Object Grasping and robotic cloud computing. However the most recent project I am working on is related to Full-Body Control on
-        a Quadruped.
-        I have also had prior industry experience and other project that have exposed more to 
-        to this field!
-
-        I am most interested in the theory of intelligence and how to create general learning systems that encompass this definition. 
-        The age-old question of AGI has so strongly captivated me that I am certain I would like to dedicate my life’s career to exploring it.       
-        I think that physical embodiment will play a significant role in the creation of AGI, thus I find that robotics and robot learning is an excellent testbed for AI research.  
-                Currently, I work in computer vision and reinforcement learning to create rich perceptual learning systems and decision-making agents.
-            My current research under Prof. Sergey Levine at BAIR involves the creation of a continual learning framework through Deep Imitative Models for 
-        robust trajectory planning in off-road environments. I also have interests in representation learning which I am pursuing 
-        with Prof. Bruno Olshausen by exploring object-part relationships and deformation through Restricted Boltzmann Machines. 
+                Most of my work so far has related to the Multi-Object Grasping and robotic cloud computing. However the most recent project I am working on is related to Full-Body Control on
+                a Quadruped.
               </p>
             </td>
           </tr>
         </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         </tbody></table>
           
           
@@ -90,7 +87,9 @@
 <!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a>
               <p></p> -->
-              <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
+              <p> We present Push-MOG, an algorithm that creates efficient object clusters, plans stable pushes to rearrange objects within those
+                clusters, and generates multi-object grasps for the rearranged object clusters.
+                </p>
             </td>
           </tr>
 
@@ -109,7 +108,7 @@
               <br>
 <!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a> -->
-              <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
+              <p> FogROS2-SGC is an extension of FogROS2 that can securely and effectively connect robot systems across different physical locations, networks, and Data Distribution Services (DDS).</p>
             </td>
           </tr>
 
@@ -128,7 +127,7 @@
               <em>Under Review at RSS 2023</em>
               <br>
               <p></p>
-              <p> Proposed analytical and learned policies to generate grasps for multiple garments using an overhead RGBD camera and policies for consolidating small heaps into larger ones.</p>
+              <p> We propose analytical and learned policies to generate grasps for multiple garments in order to consolidate small heaps into larger ones.</p>
             </td>
           </tr> 
         
@@ -160,7 +159,7 @@
 <!--               <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a>
               <p></p> -->
-              <p> Combining geometric costmaps and learned models improves long-range navigation in offroad environments.</p>
+              <p> FogROS2 extends ROS2 to allow robots to access cloud computing on demand.</p>
             </td>
           </tr>
     
