finished adding teachign courses

--- a/index.html
+++ b/index.html
@@ -221,13 +221,24 @@
           </tr>
         </tbody></table> -->
 	      
-	<table width="100%" align="center" border="0" cellpadding="20"><tbody>
+	      <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/eecslogo.jpeg" alt="Berkeley EECS Logo" width="200" height="200">
             </td>
             <td width="75%" valign="center">
-              <a href="https://www.eecs16b.org/">Student Instructor, EECS 16B - Information Devices (Spring 2022)</a>
+              <a href="https://www.eecs16b.org/">Student Instructor, EECS 16B - Information Devices II (Spring 2022)</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/eecslogo.jpeg" alt="Berkeley EECS Logo" width="200" height="200">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://www.eecs16a.org/">Tutor, EECS 16A - Information Devices I (Fall 2021)</a>
             </td>
           </tr>
         </tbody></table>
@@ -238,10 +249,24 @@
               <img src="images/eecslogo.jpeg" alt="Berkeley EECS Logo" width="200" height="200">
             </td>
             <td width="75%" valign="center">
-              <a href="https://www.eecs70.org/">Academic Intern, CS 61B - Data Structures (Spring 2021)</a>
+              <a href="https://inst.eecs.berkeley.edu/~cs61a/fa20/">Tutor, CS 61A - Structure and Interpretation of Computer Programs (Fall 2020)</a>
             </td>
           </tr>
         </tbody></table>
+
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/eecslogo.jpeg" alt="Berkeley EECS Logo" width="200" height="200">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://sp23.datastructur.es">Academic Intern, CS 61B - Data Structures (Summer 2020)</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
