--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
               <br>
               Shrey Aeron,
-              Edith Llontop,
+		    <strong>Edith Llontop</strong>,
               Aviv Adler,
               Wisdom C. Agboh,
               Mehmet Dogar,
@@ -103,7 +103,7 @@
                 <papertitle>FogROS2-SGC: A ROS2 Cloud Robotics Platform for Secure Global Connectivity</papertitle>
               
               <br>
-              Kaiyuan Chen, Ryan Hoque, Karthik Dharmarajan, Edith LLontop, Simeon Oluwafunmilore Adebola, Jeffrey Ichnowski, John Kubiatowicz, Ken Goldberg
+		    Kaiyuan Chen, Ryan Hoque, Karthik Dharmarajan, <strong>Edith LLontop</strong>, Simeon Oluwafunmilore Adebola, Jeffrey Ichnowski, John Kubiatowicz, Ken Goldberg
               <br>
 							<em>Under Review at IROS 2023</em>
               <br>
@@ -139,7 +139,7 @@
                 <papertitle>The Teenager’s Problem: Efficient Garment Decluttering Using Heap Consolidation</papertitle>
               <!-- </a> -->
               <br>
-              Wisdom C. Agboh, Edith LLontop, Ayah Ahmed, Mehmet Dogar, Ken Goldberg
+		    Wisdom C. Agboh, <strong>Edith LLontop</strong>, Ayah Ahmed, Mehmet Dogar, Ken Goldberg
               <br>
 							<em>Under Review at RSS 2023</em>
               <br>
@@ -175,7 +175,7 @@
                 <papertitle>FogROS2: An Adaptive Platform for Cloud and Fog Robotics Using ROS 2</papertitle>
               <!-- </a> -->
               <br>
-              Jeffrey Ichnowski*, Kaiyuan Chen*, Karthik Dharmarajan, Simeon Adebola, Michael Danielczuk, Victor Mayoral-Vilches, Nikhil Jha, Hugo Zhan, Edith LLontop, Derek Xu, John Kubiatowicz, Ion Stoica, Joseph Gonzalez, and Ken Goldberg
+              Jeffrey Ichnowski*, Kaiyuan Chen*, Karthik Dharmarajan, Simeon Adebola, Michael Danielczuk, Victor Mayoral-Vilches, Nikhil Jha, Hugo Zhan, <strong>Edith LLontop</strong>, Derek Xu, John Kubiatowicz, Ion Stoica, Joseph Gonzalez, and Ken Goldberg
               <br>
 							<em>Accepted at ICRA 2022</em>
               <br>
