--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               Mehmet Dogar,
               and Ken Goldberg
               <br>
-							<em>Under Review at CASE 2023</em>
+							<em>Accepted at CASE 2023</em>
               <br>
               <p></p>
               <p> We present Push-MOG, an algorithm that creates efficient object clusters, plans stable pushes to rearrange objects within those clusters, and generates multi-object grasps for the rearranged object clusters.</p>
@@ -141,7 +141,7 @@
               <br>
 		    Wisdom C. Agboh, <strong>Edith LLontop</strong>, Ayah Ahmed, Mehmet Dogar, Ken Goldberg
               <br>
-							<em>Under Review at RSS 2023</em>
+							<em>Submitted to RSS 2023</em>
               <br>
               <!-- <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a> -->
