Updated conference paper submissions

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <br>
 							<em>Accepted at CASE 2023</em>
               <br>
+	      <a href="https://arxiv.org/abs/2205.09778">arXiv</a>
               <p></p>
               <p> We present Push-MOG, an algorithm that creates efficient object clusters, plans stable pushes to rearrange objects within those clusters, and generates multi-object grasps for the rearranged object clusters.</p>
             </td>
@@ -105,7 +106,7 @@
               <br>
 		    Kaiyuan Chen, Ryan Hoque, Karthik Dharmarajan, <strong>Edith LLontop</strong>, Simeon Oluwafunmilore Adebola, Jeffrey Ichnowski, John Kubiatowicz, Ken Goldberg
               <br>
-							<em>Under Review at IROS 2023</em>
+							<em>Accepted at IROS 2023</em>
               <br>
               <!-- <a href="https://sites.google.com/view/hybrid-imitative-planning/">project page</a> /
               <a href="https://arxiv.org/abs/2111.10948">arXiv</a> -->
